# FreeChatAi

./: LICENSE  Oleksandr Vasylyna Python Developer .txt  Phyton топ-25 на ТС.txt  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  stepik-certificate(2).txt
data/: chroma.sqlite3
migrations/: env.py  script.py.mako
migrations/versions/: 1c4aad89d642_init.py  23b5f17127cd_init.py  6f9feb2a2afd_init.py  931ef5f12217_init.py  fc076bf3dd55_initial_migration.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: chats.py  users.py
src/routes/: auth.py  chat.py  chat_history.py  pdffile.py  users.py
src/schemas/: chat_history_schemas.py  chat_schemas.py  user_schemas.py
src/services/: auth.py  doc_handler.py  email.py  for_test.py  roles.py  single_long_doc.py  vector_doc_ai.py
src/services/admin_panel/: admin_panel.py  admin_panel_auth.py
src/services/templates/: get_txt_from_pdf.py
templates/: base.html  index.html  login.html  logout.html  signup.html
