[tool.poetry]
name = "freechatai"
version = "0.1.0"
description = ""
authors = ["Denis Bilokon <greenjuiced@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
sqladmin = "^0.15.0"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.4.2"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
langchain = "^0.0.306"
openai = "^0.28.1"
pypdf = "^3.16.2"
chromadb = "^0.4.13"
tiktoken = "^0.5.1"
docx2txt = "^0.8"
itsdangerous = "^2.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
